--- a/index.html
+++ b/index.html
@@ -1,1 +1,391 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Air Pollution in Africa</title>
+  <style>
+    /* ======= Global Styles ======= */
+    body {
+      margin: 20px;
+      font-family: "Poppins", Arial, sans-serif;
+      background: #F5F5F5;
+      color: #111;
+      overflow-x: hidden;
+      line-height: 1.6;
+    }
 
+    h1, h2, h3, p {
+      font-family: inherit;
+      font-size: 1.2rem;
+      text-align: left;
+      margin: 0 0 1rem 0;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      font-weight: bold;
+    }
+
+    h2 {
+      font-size: 2rem;
+      margin-top: 2rem;
+    }
+
+    h3 {
+      font-size: 1.5rem;
+      font-weight: 500;
+      color: #333;
+    }
+
+    /* ======= Fixed Navigation Bar ======= */
+    nav {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: #111;
+      color: white;
+      display: flex;
+      justify-content: flex-start;
+      gap: 2rem;
+      padding: 1rem 2rem;
+      z-index: 1000;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+      font-size: 1rem;
+      transition: color 0.3s ease;
+    }
+
+    nav a:hover {
+      color: #FFD700;
+    }
+
+    /* ======= Section containers ======= */
+    section {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+      text-align: left;
+      padding: 3rem 6rem;
+      box-sizing: border-box;
+    }
+
+    /* ======= Hero Section ======= */
+    .hero {
+      padding-top: 7rem; /* espace pour la nav bar */
+      gap: 2rem;
+    }
+
+    .hero .image img {
+      width: 100%;
+      height: auto;
+      object-fit: cover;
+      border-radius: 0px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+      display: block;
+    }
+
+    /* ======= Intro & Flourish Text ======= */
+    .intro-text,
+    .flourish1-text,
+    .flourish2-text,
+    .flourish3-text,
+    .flourish4-text,
+    .outro {
+      font-size: 1.2rem;
+      width: 100%;
+      max-width: 100%;
+    }
+
+    /* ======= Flourish Figures ======= */
+    .flourish1-figure,
+    .flourish3-figure,
+    .flourish4-figure {
+      width: 100%;
+      height: 500px;
+      margin-bottom: 1rem;
+    }
+
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+      display: block;
+    }
+
+    /* ======= Scrollytelling ======= */
+    .scrolly-section {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      margin: 4rem 0;
+    }
+
+    .visuals {
+      position: sticky;
+      top: 0;
+      width: 100%;
+      height: 100vh;
+      /*background: #000;*/
+      z-index: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .visuals iframe {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border: none;
+      opacity: 0;
+      transition: opacity 0.8s ease-in-out;
+    }
+
+    .visuals iframe.active {
+      opacity: 1;
+      z-index: 2;
+    }
+
+    .scrolling-text {
+      position: relative;
+      z-index: 3;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: black;
+      margin-top: 100vh;
+    }
+
+    .step {
+      
+    min-height: 100vh; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 3rem;
+
+    }
+
+    .step.is-active {
+      opacity: 1;
+      transform: scale(1.05);
+    }
+  
+
+    /* ======= Images ======= */
+    .image1-section img {
+      width: 100%;
+      height: auto;
+      border-radius: 0px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Navigation -->
+  <nav>
+    <a href="#project">Project</a>
+    <a href="#about">About</a>
+  </nav>
+
+  <!-- Section 1 : Title -->
+  <section class="hero" id="project">
+    <div class="hero-content">
+      <div class="text">
+        <h1>Breathing in Life or Death; A look at Africa's Air Quality</h1>
+        <h3>Air pollution and climate change are a deadly duo for Africa.</h3>
+      </div>
+      <div class="image">
+        <img src="https://images.pexels.com/photos/10666664/pexels-photo-10666664.jpeg">
+      </div>
+    </div>
+  </section>
+
+  <!-- Section 2 : Intro Text-->
+  <section class="intro-text">
+      <p>
+      Pollutants from vehicles, factories, and everyday lifestyles negatively impact health, affecting respiratory and cardiovascular systems. The Africa Clean Air Programme, endorsed by the African Union Commission, notes that super pollutants, and their impact on air quality, can poison communities and accelerate the worst effects of climate change, putting both health and economies under stress.  It continues to note that across the continent, approximately 1 million people die prematurely per year due to the health impacts of poor air quality.
+    </p>
+    <p>
+      sensors.AFRICA records that the leading pollutant is particulate matter (PM), a common proxy indicator for air pollution, with strong evidence for the negative health impacts associated with exposure to it. PM is composed of sulfate, nitrates, ammonia, sodium chloride, black carbon, mineral dust and water droplets. Of note is Indoor (household) air pollution and outdoor (ambient) air pollution.
+    </p>
+    <p>
+      According to the World Health Organisation, the combined effects of ambient air pollution and household air pollution are associated with 6.7 million premature deaths annually. Ambient air pollution is estimated to have caused 4.2 million premature deaths worldwide while household air pollution was responsible for an estimated 3.2 million deaths per year.
+    </p>
+  </section>
+
+  <!-- Section 3 : Flourish chart -->
+  <section class="flourish1-section">
+    <div class="flourish1-figure">
+      <iframe id="vis-0" src="https://public.flourish.studio/visualisation/24470534/embed"></iframe>
+    </div>
+  </section>
+
+  <!-- Section 4 : Flourish text -->
+  <section class="flourish1-text">
+     <p> 
+     In 2019, 99% of the world’s population was living in places where the WHO air quality guidelines levels were not met. Sadly, women and children bear the greatest health burden, with air pollution being one of the greatest environmental risks to child health. 
+
+    Looking at the 2030 Agenda for Sustainable Development Goals (SDGs), Air pollution impacts cut across several of them. SDGs related to air quality are SDG 3.9 focusing on reducing mortality and illness from hazardous chemicals and air pollution; SDG 11.6 aiming to reduce adverse environmental impact of cities, specifically by addressing air quality as well as SDG 7, which focuses on affordable and clean energy.
+   </p>
+  </section>
+
+  <!-- Section 5 : Scrollytelling -->
+    <section class="scrolly-section">
+    <div class="visuals">
+      <iframe id="vis-1" src="https://public.flourish.studio/visualisation/24728120/embed"></iframe>
+      <iframe id="vis-2" src="https://public.flourish.studio/visualisation/24838022/embed"></iframe>
+      <iframe id="vis-3" src="https://public.flourish.studio/visualisation/24838425/embed"></iframe>
+    </div>
+
+    <div class="scrolling-text">
+      <div class="step" data-target="vis-1">
+        <h3>Exposure pollution</h3>
+        <p>Exposure to PM2 varies across the continent.</p>
+      </div>
+      <div class="step" data-target="vis-2">
+        <h3>Household pollution</h3>
+        <p>Indoor air pollution death rates are high in the West, Central and East.</p>
+      </div>
+      <div class="step" data-target="vis-3">
+        <h3>Ambient pollution</h3>
+        <p>Northern and Southern Africa record the highest outdoor air pollution death rates.</p>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Section 6 : Flourish 2 text -->
+
+  <section class="flourish2-text">
+  <p> AIR QUALITY AND INFRASTRUCTURE </p>
+  <p>
+   People with lower incomes are more likely to live in areas with higher pollution levels due to various factors creating and perpetuating environmental inequality. Environmental burdens of society, like pollution, are disproportionately borne by marginalised communities. 
+  </p>
+  <p>
+    The 2018 study Nature: Air pollution and infant mortality in Africa by Heft-Neal et al., suggests that current estimates for the death toll of air pollution might be too low. With two datasets: one based on household surveys, which detail the time and place of nearly one million births across sub-Saharan Africa, and another detailing spatial distribution of exposure to PM2.5 based on satellite data, they estimate the impact of air pollution on mortality rates among infants in Africa. 
+  </p>
+  <p>
+    Findings show that a 10μg/m³ increase in PM2.5 concentration is associated with a 9% rise in infant mortality. This suggests that PM2.5 exposure is responsible for 22% of infant deaths in the studied countries; this means 449,000 infant deaths in 2015 alone: an extremely high death toll, suggesting the exposure-response relationship in the select African countries is steeper than previous studies.
+  </p>
+</section>
+
+<!-- Section 7 : Flourish 3 chart -->
+
+  <section class="flourish3-section">
+  <div class="flourish3-figure">
+    <iframe id="vis-4" src="https://public.flourish.studio/visualisation/24679794/embed"></iframe>
+  </div>
+</section>
+
+<!-- Section 8 : Flourish 3 Text -->
+  
+<section class="flourish3-text">
+  <h3> Mathare: Where Indoor and Outdoor Collide. </h3>
+  <p>
+  <p> In Mathare, Nairobi’s most densely populated sub-county, the line between outdoor and indoor pollution is almost invisible. Mathare packs <strong>206,564 people</strong> into just <strong>3 km²</strong> according to the KNBS Census, 2019; nearly <strong>69,000 residents per km²</strong>. 
+  </p>
+  <p>
+    The 2018 study Nature: Air pollution and infant mortality in Africa by Heft-Neal et al., suggests that current estimates for the death toll of air pollution might be too low. With two datasets: one based on household surveys, which detail the time and place of nearly one million births across sub-Saharan Africa, and another detailing spatial distribution of exposure to PM2.5 based on satellite data, they estimate the impact of air pollution on mortality rates among infants in Africa. 
+  </p>
+  <p>
+    Findings show that a 10μg/m³ increase in PM2.5 concentration is associated with a 9% rise in infant mortality. This suggests that PM2.5 exposure is responsible for 22% of infant deaths in the studied countries; this means 449,000 infant deaths in 2015 alone: an extremely high death toll, suggesting the exposure-response relationship in the select African countries is steeper than previous studies.
+  </p>
+
+<p>Smoke from household fuels, waste burning, and the settlement’s dense construction make the air outside as hazardous as the air inside: smoke, crowding, and trapped pollution.</p>
+
+<h3>Sensors tell the story</h3>
+
+<p>From 2019 to 2024, data from Mathare’s air quality sensors show a steady rise in pollution. Fine particulate matter (PM₂.₅) reached levels nearly <strong>eight times</strong> higher than the WHO’s safe annual limit of <strong>5 µg/m³</strong>, while coarse particles (PM₁₀)  more than doubled the recommended <strong>15 µg/m³</strong>.</p>
+
+<p>Every year, the air has grown more hazardous to breathe.</p>
+  
+</section>
+
+<!-- Section 9 : Flourish 4 chart -->
+
+  <section class="flourish4-section">
+  <div class="flourish4-figure">
+    <iframe id="vis-5" src="https://public.flourish.studio/visualisation/24855106/embed"></iframe>
+  </div>
+</section>
+
+  <!-- Section 10 : Flourish 4 Text -->
+  <section class="flourish3-text">
+  <p>At these concentrations, the risks are severe. The WHO notes that long-term exposure to PM₂.₅ and PM₁₀ increases the likelihood of asthma, heart disease, stroke, and premature death. In Mathare, this means residents are constantly breathing air that carries invisible but life-threatening health costs.
+  To understand why pollution accumulates so heavily here, we need to look beyond the sensors, to Mathare’s built environment; dense housing and limited open space shaping how air moves through the settlement.</p> 
+  <h3>Buildings reveal the density</h3>
+
+  <p>Using Google’s Open Buildings dataset, we verified 775 structures within the Mathare boundary.</p>
+  </section>
+
+
+   <!-- Section 11 : Image 1 (satellite) -->
+
+  <section class="image1-section">
+  <img src="https://p-2d475f4d-952b-49e8-89ec-c70437a32add.apps.webstudio.is/cgi/image/Open_building_Mathare__iqAmbk8HvzZxgtDd-joQ.png">
+  </section>
+
+
+  
+  <!-- Section  : Conclusion -->
+  <section class="outro">
+    <h2>Conclusion</h2>
+    <p>
+      These graphics highlight the urgent need to implement public health policies adapted to the most affected regions.
+    </p>
+  </section>
+
+
+  <!-- About Section -->
+  <section id="about">
+    <h2>About</h2>
+    <p>This project explores the impact of air pollution on health, infrastructure, and inequality across Africa, using data visualisations and scrollytelling for better understanding.</p>
+  </section>
+
+
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const steps = document.querySelectorAll('.step');
+      const iframes = document.querySelectorAll('.visuals iframe');
+
+      function setStepHeights() {
+        const vh = window.innerHeight;
+        steps.forEach(step => step.style.minHeight = vh + 'px');
+      }
+      setStepHeights();
+      window.addEventListener('resize', setStepHeights);
+
+      const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          steps.forEach(s => s.classList.remove('is-active'));
+          entry.target.classList.add('is-active');
+          const targetId = entry.target.dataset.target;
+          iframes.forEach(f => f.classList.remove('active'));
+          const activeFrame = document.getElementById(targetId);
+          if (activeFrame) activeFrame.classList.add('active');
+          }
+        });
+      }, { threshold: 0.3 }); 
+
+
+      steps.forEach(step => observer.observe(step));
+      iframes[0].classList.add('active');
+    });
+  </script>
+
+</body>
+</html>
